# PixVault

./: .dockerignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  heroku.yml
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  test.db
backend/app/: app.py  db.py  images.py  users.py
frontend/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(protected)/: layout.tsx
frontend/app/(protected)/profile/: page.tsx
frontend/app/(protected)/upload/: page.tsx
frontend/app/api/feed/: route.ts
frontend/app/api/login/: route.ts
frontend/app/api/logout/: route.ts
frontend/app/api/me/: route.ts
frontend/app/api/posts/: route.ts
frontend/app/api/posts/[id]/: route.ts
frontend/app/api/register/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/api/upload/auth/: route.ts
frontend/app/api/user/me/: route.ts
frontend/app/api/warmup/: route.ts
frontend/app/dashboard/: page.tsx  type.ts
frontend/app/profile/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: feature-card.tsx  features-card.tsx  footer.tsx  hero.tsx  navbar.tsx  post-card.tsx
frontend/components/ui/: file-upload.tsx  navbar-menu.tsx
frontend/lib/: auth.ts  image-utils.ts
